--- a/src/app/pages/dte/mission-builder/edit/dialog-misi-edit/dialog-misi-edit.component.html
+++ b/src/app/pages/dte/mission-builder/edit/dialog-misi-edit/dialog-misi-edit.component.html
@@ -108,14 +108,14 @@
         <mat-slide-toggle
           id="toggle-reblast"
           style="margin-right: 20px"
-          [formControl]="reblast_misi"
+          [formControl]="mission_reblast"
           name="reblast-misi"
           (change)="handleVerificationNotes($event.checked)"
           [disabled]="isDetail"
         >
         </mat-slide-toggle>
       </div>
-      <div *ngIf="form.value.reblast_misi">
+      <div *ngIf="form.value.mission_reblast">
         <div
           class="mb-16"
           formArrayName="verification_notes"
@@ -131,7 +131,7 @@
                   #singleSelect
                   [disabled]="isDetail"
                 >
-                  <mat-option *ngFor="let item of rejected_list" [value]="item">
+                  <mat-option *ngFor="let item of rejected_list" [value]="item" [disabled]="checkReason(item)">
                     {{item}}
                   </mat-option>
                 </mat-select>
