--- a/src/app/pages/dte/lottery/edit/lottery-edit.component.html
+++ b/src/app/pages/dte/lottery/edit/lottery-edit.component.html
@@ -44,35 +44,142 @@
                     </mat-error>
                   </mat-form-field>
                 </div>
-                <div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="60px" fxLayoutGap.lt-md="0px" class="px-24">
-                  <mat-form-field fxFlex="35%" class="is-light form-primary">
-                    <input matInput formControlName="start_date" [min]="minDateFrom" (focus)="startDate.open()"
-                      [matDatepicker]="startDate" placeholder="Tanggal Awal Penukaran Kupon Undian" (dateChange)="setMinEndDate()">
+
+                <div fxLayout="row" fxFlex="100" class="px-24">
+                  <mat-form-field fxFlex="50%" class="is-light form-primary">
+                    <input
+                      matInput
+                      formControlName="start_date"
+                      (focus)="startDate.open()"
+                      [matDatepicker]="startDate"
+                      placeholder="Tanggal Mulai"
+                      
+                    />
                     <mat-datepicker-toggle matSuffix [for]="startDate">
                       <mat-icon matDatepickerToggleIcon>date_range</mat-icon>
                     </mat-datepicker-toggle>
                     <mat-datepicker #startDate></mat-datepicker>
                     <mat-error
-                      *ngIf="formUndian.controls['start_date'].hasError('required') && formUndian.controls['start_date'].touched">
-                      Tanggal Awal Penukaran Kupon Undian {{'global.messages.mandatory_text' | translate}}
+                      *ngIf="
+                      formUndian.controls['start_date'].hasError(
+                          'required'
+                        ) && formUndian.controls['start_date'].touched
+                      "
+                    >
+                      {{
+                        ls.locale.manajemen_barang_sku.manajemen_koin.text15
+                      }}
+                      {{ "global.messages.mandatory_text" | translate }}
                     </mat-error>
                   </mat-form-field>
-      
-                  <mat-form-field fxFlex="35%" class="is-light form-primary">
-                    <input matInput formControlName="end_date" (focus)="endDate.open()" [matDatepicker]="endDate"
-                      placeholder="Tanggal Akhir Penukaran Kupon Undian" [min]="minDate" (dateChange)="setMinExpireDate()">
+                  <div fxFlex="10"></div>
+                  <mat-form-field
+                    fxFlex="30"
+                    class="is-light form-primary"
+                    id="start_time"
+                  >
+                    <input
+                      matInput
+                      formControlName="start_time"
+                      placeholder="{{
+                        'notification.popup_notifikasi.text8' | translate
+                      }}"
+                      [ngxTimepicker]="fullTime1"
+                      [format]="24"
+                      readonly
+                      style="width: 50px"
+                    />
+                    <mat-icon matSuffix>access_time</mat-icon>
+                    <ngx-material-timepicker
+                      #fullTime1
+                    ></ngx-material-timepicker>
+                    <mat-error
+                      *ngIf="
+                      formUndian.controls['start_time'].hasError(
+                          'required'
+                        ) && formUndian.controls['start_time'].touched
+                      "
+                    >
+                      {{
+                        ls.locale.manajemen_barang_sku.manajemen_koin.text15
+                      }}
+                      {{ "global.messages.mandatory_text" | translate }}
+                    </mat-error>
+                  </mat-form-field>
+                </div>
+
+                <div fxLayout="row" fxFlex="100" class="px-24">
+                  <mat-form-field fxFlex="50%" class="is-light form-primary">
+                    <input
+                      matInput
+                      formControlName="end_date"
+                      (focus)="endDate.open()"
+                      [matDatepicker]="endDate"
+                      placeholder="Tanggal Berakhir"
+                      
+                    />
                     <mat-datepicker-toggle matSuffix [for]="endDate">
                       <mat-icon matDatepickerToggleIcon>date_range</mat-icon>
                     </mat-datepicker-toggle>
                     <mat-datepicker #endDate></mat-datepicker>
                     <mat-error
-                      *ngIf="formUndian.controls['end_date'].hasError('required') && formUndian.controls['end_date'].touched">
-                      Tanggal Akhir Penukaran Kupon Undian {{'global.messages.mandatory_text' | translate}}
+                      *ngIf="
+                        formUndian.controls['start_date'].hasError(
+                          'required'
+                        ) && formUndian.controls['start_date'].touched
+                      "
+                    >
+                      {{
+                        ls.locale.manajemen_barang_sku.manajemen_koin.text16
+                      }}
+                      {{ "global.messages.mandatory_text" | translate }}
                     </mat-error>
                   </mat-form-field>
-                  <mat-form-field fxFlex="35%" class="is-light form-primary">
-                    <input matInput formControlName="announcement_date" (focus)="announcmentDate.open()" [matDatepicker]="announcmentDate"
-                      placeholder="Tanggal Pengumuman Pemenang Berakhir" [min]="minDate" (dateChange)="setMinExpireDate()">
+                  <div fxFlex="10"></div>
+                  <mat-form-field
+                    fxFlex="30"
+                    class="is-light form-primary"
+                    id="end_time"
+                  >
+                    <input
+                      matInput
+                      formControlName="end_time"
+                      placeholder="{{
+                        'notification.popup_notifikasi.text10' | translate
+                      }}"
+                      [ngxTimepicker]="fullTime2"
+                      [format]="24"
+                      readonly
+                    />
+                    <mat-icon matSuffix>access_time</mat-icon>
+                    <ngx-material-timepicker
+                      #fullTime2
+                    ></ngx-material-timepicker>
+                    <mat-error
+                      *ngIf="
+                        formUndian.controls['end_time'].hasError('required') &&
+                        formUndian.controls['end_time'].touched
+                      "
+                    >
+                      {{
+                        ls.locale.manajemen_barang_sku.manajemen_koin.text15
+                      }}
+                      {{ "global.messages.mandatory_text" | translate }}
+                    </mat-error>
+                  </mat-form-field>
+                </div>
+
+                <div fxLayout="row" fxFlex="100" class="px-24">
+                  <mat-form-field fxFlex="50%" class="is-light form-primary">
+                    <input
+                      matInput
+                      formControlName="announcement_date"
+                      (focus)="announcmentDate.open()"
+                      [matDatepicker]="announcmentDate"
+                      placeholder="Tanggal Pengumuman Pemenang Berakhir"
+                      [min]="minDate" 
+                      (dateChange)="setMinExpireDate()"
+                    />
                     <mat-datepicker-toggle matSuffix [for]="announcmentDate">
                       <mat-icon matDatepickerToggleIcon>date_range</mat-icon>
                     </mat-datepicker-toggle>
@@ -80,6 +187,36 @@
                     <mat-error
                       *ngIf="formUndian.controls['announcement_date'].hasError('required') && formUndian.controls['announcement_date'].touched">
                       Tanggal Pengumuman Pemenang Berakhir {{'global.messages.mandatory_text' | translate}}
+                    </mat-error>
+                  </mat-form-field>
+                  <div fxFlex="10"></div>
+                  <mat-form-field
+                    fxFlex="30"
+                    class="is-light form-primary"
+                    id="announcement_time"
+                  >
+                    <input
+                      matInput
+                      formControlName="announcement_time"
+                      placeholder="Jam Pengumuman Pemenang Berakhir"
+                      [ngxTimepicker]="fullTime3"
+                      [format]="24"
+                      readonly
+                    />
+                    <mat-icon matSuffix>access_time</mat-icon>
+                    <ngx-material-timepicker
+                      #fullTime3
+                    ></ngx-material-timepicker>
+                    <mat-error
+                      *ngIf="
+                        formUndian.controls['end_time'].hasError('required') &&
+                        formUndian.controls['end_time'].touched
+                      "
+                    >
+                      {{
+                        ls.locale.manajemen_barang_sku.manajemen_koin.text15
+                      }}
+                      {{ "global.messages.mandatory_text" | translate }}
                     </mat-error>
                   </mat-form-field>
                 </div>
@@ -485,7 +622,7 @@
                     class="ml-24 confirmation-button" 
                     (click)="submitPublishUnpublish()" 
                     fxFlex="20">
-                      Publish<!-- {{ detailFormSpin.status === 'publish' ? ('dte.pengatur_jadwal_program.text9' | translate) : ('dte.pengatur_jadwal_program.text8' | translate) }} -->
+                      Publish<!-- {{ detailFormUndian.status === 'publish' ? ('dte.pengatur_jadwal_program.text9' | translate) : ('dte.pengatur_jadwal_program.text8' | translate) }} -->
                   </button>
                 </div>
               </div>
