--- a/src/app/pages/dte/lottery/index/lottery.component.html
+++ b/src/app/pages/dte/lottery/index/lottery.component.html
@@ -45,7 +45,7 @@
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             <div class="name-container">
               <p id="status" class="status text-truncate h6 p-4 status-order" style="text-transform: uppercase;"
-                [ngClass]="row.status === 'berjalan' ? 'mat-green-800-bg' : row.status === 'berakhir' ? 'mat-red-800-bg' : row.status === 'belum berjalan' ? 'mat-black-800-bg' :
+                [ngClass]="row.status === 'berjalan' ? 'mat-green-800-bg' : row.status === 'berakhir' ? 'mat-red-800-bg' : row.status === 'belum berjalan' ? 'mat-primary-800-bg' :
                 'mat-blue-900-bg'">
                 {{
                   row.status === 'berjalan' ? 'Berjalan' : 
@@ -78,8 +78,7 @@
               <button id="btn-edit" mat-icon-button color="" (click)="directEdit(row)">
                 <mat-icon class="secondary-text">edit</mat-icon>
               </button>
-              <button id="btn-delete" mat-icon-button color="primary" matTooltip="{{'global.button.delete' | translate}}"
-                [disabled]="row.status === 'active' || !permission?.hapus" (click)="deleteTp(row.id)">
+              <button id="btn-delete" mat-icon-button color="primary" matTooltip="{{'global.button.delete' | translate}}" (click)="deleteTp(row.id)">
                 <mat-icon>delete</mat-icon>
               </button>
             </div>
