--- a/src/app/pages/dte/lottery/create/lottery-create.component.html
+++ b/src/app/pages/dte/lottery/create/lottery-create.component.html
@@ -1,9 +1,9 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
   <!-- HEADER -->
   <page-content-header contentTitle="Buat Undian">
-    <button id="btn-create-trade" style="width: 170px" [routerLink]="['/dte','lottery']" mat-raised-button type="button">
+    <!-- <button id="btn-create-trade" style="width: 170px" [routerLink]="['/dte','lottery']" mat-raised-button type="button">
       <mat-icon>save</mat-icon> {{'global.button.save' | translate}}
-    </button>
+    </button> -->
   </page-content-header>
   <!-- / HEADER -->
 
@@ -34,7 +34,7 @@
                     </mat-error>
                   </mat-form-field>
                 </div>
-                <div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="60px" fxLayoutGap.lt-md="0px" class="px-24">
+                <!-- <div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="60px" fxLayoutGap.lt-md="0px" class="px-24">
                   <mat-form-field fxFlex="35%" class="is-light form-primary">
                     <input matInput formControlName="start_date" [min]="minDateFrom" (focus)="startDate.open()"
                       [matDatepicker]="startDate" placeholder="Tanggal Awal Penukaran Kupon Undian" (dateChange)="setMinEndDate()">
@@ -70,6 +70,184 @@
                     <mat-error
                       *ngIf="formUndian.controls['announcement_date'].hasError('required') && formUndian.controls['announcement_date'].touched">
                       Tanggal Pengumuman Pemenang Berakhir {{'global.messages.mandatory_text' | translate}}
+                    </mat-error>
+                  </mat-form-field>
+                </div> -->
+
+                <div fxLayout="row" fxFlex="100" class="px-24">
+                  <mat-form-field fxFlex="50%" class="is-light form-primary">
+                    <input
+                      matInput
+                      formControlName="start_date"
+                      [min]="minDate"
+                      (focus)="startDate.open()"
+                      [matDatepicker]="startDate"
+                      placeholder="Tanggal Mulai"
+                      
+                    />
+                    <mat-datepicker-toggle matSuffix [for]="startDate">
+                      <mat-icon matDatepickerToggleIcon>date_range</mat-icon>
+                    </mat-datepicker-toggle>
+                    <mat-datepicker #startDate></mat-datepicker>
+                    <mat-error
+                      *ngIf="
+                      formUndian.controls['start_date'].hasError(
+                          'required'
+                        ) && formUndian.controls['start_date'].touched
+                      "
+                    >
+                      {{
+                        ls.locale.manajemen_barang_sku.manajemen_koin.text15
+                      }}
+                      {{ "global.messages.mandatory_text" | translate }}
+                    </mat-error>
+                  </mat-form-field>
+                  <div fxFlex="10"></div>
+                  <mat-form-field
+                    fxFlex="30"
+                    class="is-light form-primary"
+                    id="start_time"
+                  >
+                    <input
+                      matInput
+                      formControlName="start_time"
+                      placeholder="{{
+                        'notification.popup_notifikasi.text8' | translate
+                      }}"
+                      [ngxTimepicker]="fullTime1"
+                      [format]="24"
+                      readonly
+                      style="width: 50px"
+                    />
+                    <mat-icon matSuffix>access_time</mat-icon>
+                    <ngx-material-timepicker
+                      #fullTime1
+                    ></ngx-material-timepicker>
+                    <mat-error
+                      *ngIf="
+                      formUndian.controls['start_time'].hasError(
+                          'required'
+                        ) && formUndian.controls['start_time'].touched
+                      "
+                    >
+                      {{
+                        ls.locale.manajemen_barang_sku.manajemen_koin.text15
+                      }}
+                      {{ "global.messages.mandatory_text" | translate }}
+                    </mat-error>
+                  </mat-form-field>
+                </div>
+
+                <div fxLayout="row" fxFlex="100" class="px-24">
+                  <mat-form-field fxFlex="50%" class="is-light form-primary">
+                    <input
+                      matInput
+                      formControlName="end_date"
+                      [min]="minDate"
+                      (focus)="endDate.open()"
+                      [matDatepicker]="endDate"
+                      placeholder="Tanggal Berakhir"
+                      
+                    />
+                    <mat-datepicker-toggle matSuffix [for]="endDate">
+                      <mat-icon matDatepickerToggleIcon>date_range</mat-icon>
+                    </mat-datepicker-toggle>
+                    <mat-datepicker #endDate></mat-datepicker>
+                    <mat-error
+                      *ngIf="
+                        formUndian.controls['start_date'].hasError(
+                          'required'
+                        ) && formUndian.controls['start_date'].touched
+                      "
+                    >
+                      {{
+                        ls.locale.manajemen_barang_sku.manajemen_koin.text16
+                      }}
+                      {{ "global.messages.mandatory_text" | translate }}
+                    </mat-error>
+                  </mat-form-field>
+                  <div fxFlex="10"></div>
+                  <mat-form-field
+                    fxFlex="30"
+                    class="is-light form-primary"
+                    id="end_time"
+                  >
+                    <input
+                      matInput
+                      formControlName="end_time"
+                      placeholder="{{
+                        'notification.popup_notifikasi.text10' | translate
+                      }}"
+                      [ngxTimepicker]="fullTime2"
+                      [format]="24"
+                      readonly
+                    />
+                    <mat-icon matSuffix>access_time</mat-icon>
+                    <ngx-material-timepicker
+                      #fullTime2
+                    ></ngx-material-timepicker>
+                    <mat-error
+                      *ngIf="
+                        formUndian.controls['end_time'].hasError('required') &&
+                        formUndian.controls['end_time'].touched
+                      "
+                    >
+                      {{
+                        ls.locale.manajemen_barang_sku.manajemen_koin.text15
+                      }}
+                      {{ "global.messages.mandatory_text" | translate }}
+                    </mat-error>
+                  </mat-form-field>
+                </div>
+
+                <div fxLayout="row" fxFlex="100" class="px-24">
+                  <mat-form-field fxFlex="50%" class="is-light form-primary">
+                    <input
+                      matInput
+                      formControlName="announcement_date"
+                      (focus)="announcmentDate.open()"
+                      [matDatepicker]="announcmentDate"
+                      placeholder="Tanggal Pengumuman Pemenang Berakhir"
+                      [min]="minDate" 
+                      (dateChange)="setMinExpireDate()"
+                    />
+                    <mat-datepicker-toggle matSuffix [for]="announcmentDate">
+                      <mat-icon matDatepickerToggleIcon>date_range</mat-icon>
+                    </mat-datepicker-toggle>
+                    <mat-datepicker #announcmentDate></mat-datepicker>
+                    <mat-error
+                      *ngIf="formUndian.controls['announcement_date'].hasError('required') && formUndian.controls['announcement_date'].touched">
+                      Tanggal Pengumuman Pemenang Berakhir {{'global.messages.mandatory_text' | translate}}
+                    </mat-error>
+                  </mat-form-field>
+                  <div fxFlex="10"></div>
+                  <mat-form-field
+                    fxFlex="30"
+                    class="is-light form-primary"
+                    id="announcement_time"
+                  >
+                    <input
+                      matInput
+                      formControlName="announcement_time"
+                      placeholder="Jam Pengumuman Pemenang Berakhir"
+                      [ngxTimepicker]="fullTime3"
+                      [format]="24"
+                      readonly
+                    />
+                    <mat-icon matSuffix>access_time</mat-icon>
+                    <ngx-material-timepicker
+                      #fullTime3
+                    ></ngx-material-timepicker>
+                    <mat-error
+                      *ngIf="
+                        formUndian.controls['end_time'].hasError('required') &&
+                        formUndian.controls['end_time'].touched
+                      "
+                    >
+                      {{
+                        ls.locale.manajemen_barang_sku.manajemen_koin.text15
+                      }}
+                      {{ "global.messages.mandatory_text" | translate }}
                     </mat-error>
                   </mat-form-field>
                 </div>
@@ -140,7 +318,7 @@
             </form>
           </div>
         </mat-tab>
-        <mat-tab label="Audience" [disabled]="true">
+        <!-- <mat-tab label="Audience" [disabled]="true">
           <div class="ayo-middle py-24" fxLayout="column">
            
           </div>
@@ -149,7 +327,7 @@
           <div class="ayo-middle py-24" fxLayout="column">
             
           </div>
-        </mat-tab>
+        </mat-tab> -->
       </mat-tab-group>
     </div>
   </div>
