--- a/src/app/pages/dte/lottery/edit/lottery-edit.component.html
+++ b/src/app/pages/dte/lottery/edit/lottery-edit.component.html
@@ -585,7 +585,7 @@
                   <p style="font-style: italic;font-weight: bold; margin-bottom: 0px">Deskripsi Kupon Undian</p>
                   <div fxLayout="column" fxFlex="100">
                   <mat-form-field fxFlex="100%" class="descInput exportTextarea desc-template" floatLabel="never">
-                    <textarea matInput [froalaEditor]="options" formControlName="desc" data-froala-id="froala-tugas"></textarea>
+                    <textarea matInput [froalaEditor]="options" formControlName="desc"></textarea>
                   </mat-form-field>
                   </div>
                 </div>
@@ -598,7 +598,7 @@
                   </div>
                   <div fxLayout="column" fxFlex="100">
                   <mat-form-field fxFlex="100%" class="descInput exportTextarea desc-template" floatLabel="never">
-                    <textarea matInput [froalaEditor]="options" formControlName="desc_tc" data-froala-id="froala-tugas"></textarea>
+                    <textarea matInput [froalaEditor]="options" formControlName="desc_tc"></textarea>
                   </mat-form-field>
                   </div>
                 </div>
