change apply_all_rrp to is_sync_price

--- a/src/app/pages/sku-management/product-cashier/edit/edit.component.html
+++ b/src/app/pages/sku-management/product-cashier/edit/edit.component.html
@@ -117,7 +117,7 @@
             *ngIf="productCashierType === 'rrp'"
             labelPosition="before"
             [disabled]="isDetail"
-            formControlName="apply_all_rrp"
+            formControlName="is_sync_price"
           >
             Berlaku untuk seluruh outlet
           </mat-slide-toggle>
