--- a/src/app/pages/dte/lottery/create/lottery-create.component.html
+++ b/src/app/pages/dte/lottery/create/lottery-create.component.html
@@ -79,11 +79,11 @@
                     <input
                       matInput
                       formControlName="start_date"
-                      [min]="minDate"
+                      [min]="minDateStart"
                       (focus)="startDate.open()"
                       [matDatepicker]="startDate"
                       placeholder="Tanggal Mulai"
-                      
+                      (dateChange)="onDateStart($event)"
                     />
                     <mat-datepicker-toggle matSuffix [for]="startDate">
                       <mat-icon matDatepickerToggleIcon>date_range</mat-icon>
@@ -143,7 +143,7 @@
                     <input
                       matInput
                       formControlName="end_date"
-                      [min]="minDate"
+                      [min]="minDateEnd"
                       (focus)="endDate.open()"
                       [matDatepicker]="endDate"
                       placeholder="Tanggal Berakhir"
@@ -208,7 +208,7 @@
                       (focus)="announcmentDate.open()"
                       [matDatepicker]="announcmentDate"
                       placeholder="Tanggal Pengumuman Pemenang Berakhir"
-                      [min]="minDate" 
+                      [min]="minDateAnnounce" 
                       (dateChange)="setMinExpireDate()"
                     />
                     <mat-datepicker-toggle matSuffix [for]="announcmentDate">
