--- a/src/app/pages/settings/force-update-apps/force-update-apps.component.html
+++ b/src/app/pages/settings/force-update-apps/force-update-apps.component.html
@@ -64,7 +64,7 @@
           </div>
           <div fxLayout="row wrap" fxLayoutAlign="start center" fxFlex="1 0 auto">
             <mat-form-field fxFlex="100" class="is-light form-primary">
-              <mat-select placeholder="region" formControlName="region">
+              <mat-select placeholder="Region" formControlName="region">
                 <mat-option *ngFor="let item of Region" [value]="item.code">{{item.name}}</mat-option>
               </mat-select>
               <mat-error
