--- a/src/app/pages/pay-later/pay-later-activation/pay-later-activation-mitra/pay-later-activation.component.html
+++ b/src/app/pages/pay-later/pay-later-activation/pay-later-activation-mitra/pay-later-activation.component.html
@@ -1,7 +1,7 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
   <!-- HEADER -->
-  <page-content-header [contentTitle]="'Pengajuan Aktivasi'">
-  </page-content-header>
+  <!-- <page-content-header [contentTitle]="'Pengajuan Aktivasi'">
+  </page-content-header> -->
   <!-- / HEADER -->
   <div class="content p-24">
     <div class="ayo-main-wrapper mat-white-bg p-0" fxLayout="column">
@@ -147,7 +147,7 @@
           <!-- </div> -->
         </mat-tab>
         <mat-tab label="SRC">
-          <app-pay-later-activation-src *ngIf="selectedTab === 1"></app-pay-later-activation-src>
+          <app-pay-later-activation-src [dataType]="dataType"></app-pay-later-activation-src>
         </mat-tab>
       </mat-tab-group>
     </div>
