--- a/src/app/pages/pay-later/pay-later-deactivate/index/pay-later-deactivate.component.html
+++ b/src/app/pages/pay-later/pay-later-deactivate/index/pay-later-deactivate.component.html
@@ -1,16 +1,16 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
   <!-- HEADER -->
-  <page-content-header [contentTitle]="'Pengajuan Deaktivasi'">
-  </page-content-header>
+  <!-- <page-content-header [contentTitle]="'Pengajuan Deaktivasi'">
+  </page-content-header> -->
   <!-- / HEADER -->
   <div class="content p-24">
     <div class="ayo-main-wrapper mat-white-bg p-0" fxLayout="column">
       <mat-tab-group [selectedIndex]="selectedTab" (selectedTabChange)="setSelectedTab($event)">
         <mat-tab label="Pengajuan">
-          <app-pay-later-deactivate-request *ngIf="selectedTab === 0"></app-pay-later-deactivate-request>
+          <app-pay-later-deactivate-request [dataType]="dataType"></app-pay-later-deactivate-request>
         </mat-tab>
         <mat-tab label="Riwayat">
-          <app-pay-later-deactivate-history *ngIf="selectedTab === 1"></app-pay-later-deactivate-history>
+          <app-pay-later-deactivate-history [dataType]="dataType"></app-pay-later-deactivate-history>
         </mat-tab>
       </mat-tab-group>
     </div>
