--- a/src/app/pages/dte/coin-disburstment/create/coin-disburstment-create.component.html
+++ b/src/app/pages/dte/coin-disburstment/create/coin-disburstment-create.component.html
@@ -8,7 +8,7 @@
   <!-- / HEADER -->
   <div class="content p-24">
     <div class="table-wrapper">
-      <mat-tab-group [selectedIndex]="selectedTab">
+      <mat-tab-group [selectedIndex]="selectedTab" (selectedIndexChange)="selectedTab = $event">
         <mat-tab label="{{'dte.coin_disbursement.coin_exchange' | translate}}">
           <div class="ayo-middle py-24" fxLayout="column">
             <form autocomplete="off" [formGroup]="formCoin" fxLayout="row" fxLayoutGap="16px">
@@ -325,7 +325,7 @@
         </mat-tab>
 
         <mat-tab label="{{'dte.coin_disbursement.coin_exchange_list' | translate}}" *ngIf="isEdit && detailCoin.status === 'publish'">
-          <app-coin-disburstment-exchange></app-coin-disburstment-exchange>
+          <app-coin-disburstment-exchange [isTabActive]="selectedTab"></app-coin-disburstment-exchange>
         </mat-tab>
       </mat-tab-group>
     </div>
